--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -651,18 +651,33 @@
                   Height="100"
                   Width="178">
 
-                    <Image Source="{Binding ImagePath}" 
-                       Stretch="UniformToFill" />
-
+                    <Image Stretch="UniformToFill">
+                        <Image.Source>
+                            <BitmapImage UriSource="{Binding ImagePath}" CreateOptions="BackgroundCreation"/>
+                        </Image.Source>
+                    </Image>
+                    
                     <Border Margin="2"
-                        VerticalAlignment="Bottom"
-                        HorizontalAlignment="Right"
-                        Background="Black"
-                        Padding="4,0,4,0">
+                            VerticalAlignment="Bottom"
+                            HorizontalAlignment="Right"
+                            Background="Black"
+                            Padding="4,0,4,0">
                         <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
                                TextWrapping="NoWrap" 
                                Foreground="White"
                                FontSize="14"/>
+                    </Border>
+
+                    <Border Margin="2"
+                            Visibility="{Binding IsLive, Converter={StaticResource BooleanToVisibilityConverter}}"
+                            VerticalAlignment="Bottom"
+                            HorizontalAlignment="Right"
+                            Background="DarkRed"
+                            Padding="4,0,4,4">
+                        <TextBlock Text="{Binding Path=LocalizedResources.Live, Source={StaticResource LocalizedStrings}}" 
+                               TextWrapping="NoWrap" 
+                               Foreground="White"
+                               FontSize="18"/>
                     </Border>
 
                     <Border VerticalAlignment="Top"
