--- a/LiteTube/ChannelPage.xaml
+++ b/LiteTube/ChannelPage.xaml
@@ -12,50 +12,59 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True"
+    shell:SystemTray.IsVisible="False"
+    shell:SystemTray.BackgroundColor="Transparent"
     shell:SystemTray.ProgressIndicator="{Binding ProgressIndicator}"
     Style="{StaticResource PageThemeStyle}"
     ApplicationBar="{StaticResource GlobalAppBar}">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneBackgroundBrush}">
+    <Grid x:Name="LayoutRoot" 
+          Background="{StaticResource PhoneBackgroundBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <controls:NavigationPanel Grid.Row="0" 
-                                  x:Name="NavControl"
-                                  DataContext="{Binding NavigationPanelViewModel}"/>
-
-        <Grid Grid.Row="1"
-              Height="150">
+        <Grid Grid.Row="0"
+              Height="250">
             <Image Source="{Binding Image}" 
                    Stretch="Fill"
-                   Height="125"
+                   Height="195"
                    VerticalAlignment="Top"/>
             <StackPanel Orientation="Horizontal">
-                <Border VerticalAlignment="Bottom"
-                        HorizontalAlignment="Left"
-                        Margin="24,0,0,0"
-                        BorderBrush="{StaticResource PhoneBackgroundBrush}"
-                        BorderThickness="3">
-                    <Image Source="{Binding ChannelImage}" 
-                           Height="85"
-                           Width="85"
-                           Stretch="UniformToFill" 
-                           VerticalAlignment="Bottom"
-                           HorizontalAlignment="Center"/>
-                </Border>
+                <Ellipse Width="85"
+                         Height="85"
+                         Margin="24,140,0,0"
+                         HorizontalAlignment="Left" 
+                         Stroke="{StaticResource PhoneBackgroundBrush}" 
+                         StrokeThickness="3">
+                    <Ellipse.Fill>
+                        <ImageBrush>
+                            <ImageBrush.ImageSource>
+                                <BitmapImage UriSource="{Binding ChannelImage}" 
+                                             CreateOptions="BackgroundCreation"/>
+                            </ImageBrush.ImageSource>
+                        </ImageBrush>
+                    </Ellipse.Fill>
+
+                </Ellipse>
                 <TextBlock Text="{Binding Title, Converter={StaticResource UppercaseConverter}}"
-                           Margin="8,0,0,0"
-                           VerticalAlignment="Bottom"
+                           Margin="8,200,0,0"
                            FontWeight="SemiBold"/>
             </StackPanel>
+
+            <!--<controls:NavigationPanel x:Name="NavControl"
+                                      Height="60"
+                                      Margin="0,30,0,0"
+                                      Background="Transparent"
+                                      VerticalAlignment="Top"
+                                      DataContext="{Binding NavigationPanelViewModel}"/>-->
         </Grid>
 
         <phone:Pivot Grid.Row="2"
+                     Margin="0,-30,0,0"
                      SelectedIndex="{Binding SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=Default}">
             
             <phone:PivotItem Margin="{StaticResource DefaultListBoxMargin}">
