--- a/LiteTube/ChannelPage.xaml
+++ b/LiteTube/ChannelPage.xaml
@@ -55,12 +55,13 @@
                            FontWeight="SemiBold"/>
             </StackPanel>
 
-            <!--<controls:NavigationPanel x:Name="NavControl"
+            <controls:NavigationPanel x:Name="NavControl"
                                       Height="60"
-                                      Margin="0,30,0,0"
+                                      Margin="0,0,0,0"
                                       Background="Transparent"
+                                      Foreground="Transparent"
                                       VerticalAlignment="Top"
-                                      DataContext="{Binding NavigationPanelViewModel}"/>-->
+                                      DataContext="{Binding NavigationPanelViewModel}"/>
         </Grid>
 
         <phone:Pivot Grid.Row="2"
