--- a/LiteTube/Properties/AssemblyInfo.cs.tmpl
+++ b/LiteTube/Properties/AssemblyInfo.cs.tmpl
@@ -5,11 +5,11 @@ using System.Resources;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("LightTube")]
+[assembly: AssemblyTitle("LightTube Pro")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Pavel Dmitriev")]
-[assembly: AssemblyProduct("LightTube")]
+[assembly: AssemblyProduct("LightTube Pro")]
 [assembly: AssemblyCopyright("Copyright (c) 2017")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
@@ -31,6 +31,6 @@ using System.Resources;
 //
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
-[assembly: AssemblyVersion("2.0.10.$REVISION$")]
-[assembly: AssemblyFileVersion("2.0.10.$REVISION$")]
+[assembly: AssemblyVersion("2.0.11.$REVISION$")]
+[assembly: AssemblyFileVersion("2.0.11.$REVISION$")]
 [assembly: NeutralResourcesLanguageAttribute("en-US")]
