app id and title

--- a/LiteTube/Properties/AssemblyInfo.cs.tmpl
+++ b/LiteTube/Properties/AssemblyInfo.cs.tmpl
@@ -5,12 +5,12 @@ using System.Resources;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("LightTube Pro")]
+[assembly: AssemblyTitle("LightTube")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Pavel Dmitriev")]
-[assembly: AssemblyProduct("LightTube Pro")]
-[assembly: AssemblyCopyright("Copyright (c) 2017")]
+[assembly: AssemblyProduct("LightTube")]
+[assembly: AssemblyCopyright("Copyright (c) 2018")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
